# Europa-trncmp

./: CMakeLists.txt  GenExemplar.py  Makefile  README.md  TODO.md  TTEST.sh  app_test.ini  config_test.ini  config_test_1.ini  config_test_2.ini  lib  matfile.txt  matmul.py  mkmat.sed
EVO-HOLD/: metric_mod.f90  population_mod.f90  pso_model_mod.f90  real_member_mod.f90  real_model_mod.f90
HOLD/: deque_double_class.f90  deque_integer_class.f90  deque_single_class.f90  dice_class.f90  entropy_class.f90  testDequeComplex.pf  testDequeDouble.pf  tlogger.f90
apps/: CMakeLists.txt
apps/GIS/: CMakeLists.txt  gis_test.f90
apps/Orrery/: CMakeLists.txt  plot_planets.f90  test_horizon.f90
apps/Telescope/: CMakeLists.txt  VScope.f90
apps/solve_kepler/: CMakeLists.txt  kepler_mod.f90  solve_kepler.f90
apps/ttt_matchbox/: CMakeLists.txt  matchbox_mod.f90  tictactoe.f90  ttt_matchbox.f90
data/: Astro  Earth.data  EarthMoon.data  Moon.data  Yacht  time-series
docs/: Makefile  europa.md
papers/: Makefile  asiwp.sty  paterns.txt
papers/anomaly/: Anomaly.tex  Makefile  asiwp.sty  bio.tex
papers/anomaly/figures/: AutoGen.fig  Makefile  threelayer.fig
papers/anomaly/images/: Makefile
papers/bpnn/: DerivationBackprop-V1.tex  DerivationBackprop-V2.tex  DerivationBackprop.tex  Makefile
papers/bpnn/figures/: Makefile  MiddleNet.fig  hypercube.fig  wakeparts.fig
papers/bpnn/images/: Makefile
papers/common/: soliday-bio.tex
papers/nlls/: Makefile  nlls.tex
papers/nlls/figures/: LocalSetup.fig  Makefile  newton.fig
papers/nlls/images/: Makefile
python/: Agent.py  BPNN.py  ConvertTimeSeries.py  DataGenerator.py  Environment.py  FGA.py  Flib.py  MakeTTT.py  Makefile  SlidingWindow.py  TimeConvert.py  UtilityTTT.py  ann_keras.py  debug.ttt  fga.cc  fga.hh  flib.cc  flib.hh  ftest.cc  interpolate.py  qtable.ttt  runga.cc  simple.py  simple2.py  test_gen.py
python/data/: Seeds
src/: CMakeLists.txt
src/ftest/: CMakeLists.txt  ftest_PCA.f90  ftest_appopts.f90  ftest_bpnn.f90  ftest_btree.f90  ftest_config.f90  ftest_construct.f90  ftest_dropoff.f90  ftest_entropy.f90  ftest_exemplar.f90  ftest_fft.f90  ftest_fga.f90  ftest_fgroup.f90  ftest_final_test.f90  ftest_gnuplot.f90  ftest_gravity.f90  ftest_hashmap.f90  ftest_hdf5.f90  ftest_kdtree.f90  ftest_openmp.f90  ftest_openmp_fft.f90  ftest_planetdata.f90  ftest_polyfit.f90  ftest_psgraph.f90  ftest_pso.f90  ftest_readline.f90  ftest_sgd.f90  ftest_simple.f90  ftest_time.f90  ftest_tle.f90  ftest_tlogger.f90  ftest_vla.f90  ftest_yy.f90
src/lib/: CMakeLists.txt  KDTree_class.f90  app_options_mod.f90  bpn2_class.f90  btree_class.f90  cluster_mod.f90  compare_types_mod.f90  complex_deque_class.f90  config_entry_class.f90  config_entry_list_mod.f90  config_entry_mod.f90  config_section_mod.f90  configdb_mod.f90  confusion_mod.f90  constants_env.f90  copy_mod.f90  datetime_mod.f90  deque_complex_class.f90  deque_double_class.f90  deque_integer_class.f90  deque_object_class.f90  deque_single_class.f90  dfft_class.f90  dfftpack.f90  dice_class.f90  dice_mod.f90  double_deque_class.f90  dropoff_mod.f90  entropy_mod.f90  entropy_seed_source.f90  exemplar_class.f90  fft_mod.f90  file_tools.f90  fuzzy_group_mod.f90  fuzzy_partition_mod.f90  fuzzy_set_mod.f90  gis_mod.f90  hash_object_class.f90  integer_deque_class.f90  interpolate_mod.f90  (+25 more)
src/lib/astro/: astro_body_mod.f90  horizon_data_mod.f90  orrery_mod.f90
src/lib/dfftpack/: CMakeLists.txt  cfftb.f  cfftf.f  cffti.f  cffti1.f  dcosqb.f  dcosqf.f  dcost.f  dzfftb.f  dzfftf.f  ezfft1.f  radb2.f  radb4.f  radf2.f  radf4.f  rffti1.f  sint1.f
src/lib/evolve/: evo_entropy_mod.f90  fga_mod.f90  fga_omp_mod.f90  pso_mod.f90  real_group_mod.f90  real_model_mod.f90  real_toolbox_mod.f90  test_models.f90
src/lib/ffnn/: ffnn_activation_mod.f90  ffnn_layer_mod.f90  ffnn_network_mod.f90  ffnn_sgd.f90
src/lib/linalg/: covariance_mod.f90  dgesdd_f95.f90  dgetrf_f95.f90  dgetri_f95.f90  linalg3d_mod.f90  matrix3d_mod.f90  matrix_mod.f90  px_blas.f90  tc_lapack.f90  tc_lapack_f77.f90  vector3d_mod.f90  vector_mod.f90
src/lib/pso/: pso_mod.f90  pso_model_mod.f90  test_models.f90
src/utest/: CMakeLists.txt  build_pfunit.cmake  utest.tar
src/utest/arrays/: CMakeLists.txt  testCopy_C16.pf  testCopy_I4.pf  testCopy_R4.pf  testCopy_R8.pf  testSum_C16.pf  testSum_I4.pf  testSum_R4.pf  testSum_R8.pf  testZero_C16.pf  testZero_I4.pf  testZero_R4.pf  testZero_R8.pf  testZero_char.pf
src/utest/astro/: CMakeLists.txt  test_tle.pf
src/utest/container/: CMakeLists.txt  testBTree.pf  testCasting.pf  testDequeCustom.pf  testDequeDouble.pf  testDequeInteger.pf  testDequeSingle.pf  testHashMap.pf  testSListCustom.pf
src/utest/core/: CMakeLists.txt  test_core.pf
src/utest/datetime/: CMakeLists.txt  test_time.pf  test_time_tools.pf
src/utest/entropy/: CMakeLists.txt  test_dice.pf
src/utest/evolve/: CMakeLists.txt  test_dropoff.pf  test_evo_entropy.pf  test_real_model.pf  test_real_tools.pf
src/utest/ffnn/: CMakeLists.txt  test_activate.pf  test_layer.pf  test_network.pf
src/utest/fuzzy/: CMakeLists.txt  test_fgroup.pf  test_fpart.pf  test_fset.pf
src/utest/gis/: CMakeLists.txt  test_core.pf
src/utest/linalg/: CMakeLists.txt  test_cov.pf  test_mat.pf  test_pca.pf  test_vec.pf
src/utest/linear3d/: CMakeLists.txt  test_lin3d.pf  test_mat3d.pf  test_vec3d.pf
src/utest/mathaux/: CMakeLists.txt  testCompare.pf  testConst.pf  testInterp.pf  testInterp3.pf  testInterp5.pf  testInterpL.pf  testMathAux.pf  testRotation.pf
src/utest/random/: CMakeLists.txt  runstat.pf
src/utest/stats/: CMakeLists.txt  test_confusion.pf  test_histogram.pf  test_roulette.pf  test_running_stat.pf  test_single_stat.pf
src/utest/strings/: CMakeLists.txt  testConfigEntry.pf  testStrings.pf  testTString.pf  testVString.pf
tools/: CMakeLists.txt  tool_xx.tar
tools/tool_aa/: CMakeLists.txt  tool_aa.f90
tools/tool_bb/: CMakeLists.txt  tool_xx.f90
